--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
       </div>
 
       <div class="percentage" id="percentage">
-        20%
+        
       </div>
     </div>
 
     <p class="text">Select how many glasses of water that you have drank</p>
 
     <div class="cups">
-      <div class="cup cup-small full">250 ml</div>
-      <div class="cup cup-small full">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
       <div class="cup cup-small">250 ml</div>
       <div class="cup cup-small">250 ml</div>
       <div class="cup cup-small">250 ml</div>
