Add fill functionality in js

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
       <div class="cup cup-small">250 ml</div>
     </div>
 
+    <button class="btn">Reset</button>
+
     <script src="script.js"></script>
   </body>
 </html>
